fix image on mobile

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -13,9 +13,9 @@
 }
 
 /* Mobile */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     .homeContainer .portrait {
-        margin-top: 35%;
+        margin-top: 20%;
         width: 70%;
         vertical-align: middle;
         margin-bottom: 3%;
